Fix text running off edge on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   height: 350px;
   background: linear-gradient(#006DF0, #00BCD4);
   margin-bottom: 40px;
+  overflow: hidden;
 }
 
 .intro .intro-child {
@@ -230,6 +231,7 @@ body {
   height: 350px;
   background: linear-gradient(#00BCD4, #006DF0);
   margin-top: 40px;
+  overflow: hidden;
 }
 
 .footer .footer-text-container {
